--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,4 +11,7 @@ body {
   .btn {
     @apply bg-[#12b488] text-white px-3 py-2 rounded-md text-white;
   }
+  .card {
+    @apply p-3 rounded-md bg-white h-full;
+  }
 }
